--- a/css/index.css
+++ b/css/index.css
@@ -15,9 +15,12 @@
     flex-direction: row;
     justify-content: center;
     color: white !important;
-    background-color: #9bb9ff;
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+
+}
+
+#wagmi-logo {
+    width: 45%;
+    height: 80%;
 }
 
 #top .link {
