--- a/css/wave-catchers.css
+++ b/css/wave-catchers.css
@@ -1,11 +1,11 @@
 @font-face {  
-	font-family: 'Wavey';
-	src: URL('../css/wheaton\ capitals.otf') format('truetype');
+	font-family: 'Gotham Rounded Bold';
+	src: URL('../css/GothamRounded-Bold.otf') format('truetype');
 }  
 
 html, body {
 	overscroll-behavior: none;
-	font-family: 'Wavey', sans-serif;
+	font-family: 'Gotham Rounded Bold', sans-serif;
 	margin: 0;
 	width: 100%;
 	height: 100%;
@@ -42,7 +42,7 @@ html, body {
 
 .coco-icon {
 	display: inline;
-	width: 1.8vw;
+	width: 2.6vw;
 }
 
 .hidden {
@@ -65,7 +65,7 @@ h1, h2 {
 }
 
 h1 {
-	font-family: "Wavey";
+	font-family: "Gotham Rounded Bold";
 	color: black;
 	font-size: 3vw !important;
 	line-height: 3vw !important;
@@ -98,7 +98,7 @@ p {
 
 .body {
 	background-color: white;
-	font-family: 'Wavey', sans-serif;
+	font-family: 'Gotham Rounded Bold', sans-serif;
 	background-size: auto;
 	background-repeat: repeat;
 	color: black;
@@ -174,7 +174,7 @@ p {
 	line-height: 1.7vw;
 	padding: .5vw;
 	border-radius: 5px;
-	font-family: 'Wavey', sans-serif;
+	font-family: 'Gotham Rounded Bold', sans-serif;
 	font-weight: bolder;
 }
 
