--- a/css/market.css
+++ b/css/market.css
@@ -165,10 +165,11 @@
 }
 
 .collection-img {
-    margin: 10px;
+    margin-top: -5%;
+    margin: auto;
 	border-style: solid;
 	border-color: black;
-	border-radius: 20px;
+	border-radius: 10px;
 	border-width: .5vw;
     width: 30%;
     /* min-width: 200px;
