--- a/css/wave-catchers.css
+++ b/css/wave-catchers.css
@@ -13,11 +13,11 @@ html, body {
 }
 
 .coco-balance-float {
-	position: fixed;
+	/* position: fixed;
 	right: 30px;
-	bottom: 30px;
+	bottom: 30px; */
 	font-size: 1.5vw;
-	z-index: 10;
+	/* z-index: 10; */
 	display: flex;
 	align-items: center;
 	padding: 15px;
