--- a/css/wave-catchers.css
+++ b/css/wave-catchers.css
@@ -13,7 +13,7 @@ html, body {
 }
 
 .coco-balance-float {
-	margin-left: 10%
+	margin-left: 10%;
 	/* position: fixed;
 	right: 30px;
 	bottom: 30px; */
