--- a/css/wave-catchers.css
+++ b/css/wave-catchers.css
@@ -168,7 +168,7 @@ p {
 
 .button {
 	touch-action: manipulation;
-	background-color: black;
+	background-color: #a1ffb1;
     border: .3vw rgb(255, 255, 255) solid;
 	color: white;
 	font-size: 1.4vw;
