--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,12 @@
     color: white !important;
 
 }
-
+.live-past-border{
+    background-color: white;
+    padding: 10px;
+    border: black;
+    border-radius: 15px;
+}
 #wagmi-logo {
     width: 45%;
     height: 80%;
