--- a/css/market.css
+++ b/css/market.css
@@ -173,7 +173,7 @@
     height: 200px;
     /* max-height: 300px;
     max-width: 300px; */
-    background-color: black;
+    background-color: white;
 }
 
 .collection-info {
