--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@
 .live-past-border{
     background-color: white;
     padding: 10px;
-    border: black;
+    border: .5vw solid black;
     border-radius: 15px;
 }
 #wagmi-logo {
