--- a/css/market.css
+++ b/css/market.css
@@ -430,10 +430,17 @@ h4 {
 
     #live-button {
         border: none;
+        background-color: black;
+        color: white;
+        border-radius: 15px;
+
     }
 
     #past-button {
         border: none;
+        background-color: white;
+        color: black;
+        border-radius: 15px;
     }
 
     /* End approval section*/
