--- a/css/market.css
+++ b/css/market.css
@@ -67,6 +67,7 @@
 
 #live-collections button, #past-collections button {
     background-color: #a1ffb1;
+    color: black;
     width: 90%;
 }
 
@@ -405,6 +406,7 @@ h4 {
 
     #live-collections button, #past-collections button {
         width: 90%;
+        color: black;
         background-color: #a1ffb1;
     }
 
@@ -426,14 +428,6 @@ h4 {
     #approval-button {
         width: 90%;
         background-color: black;
-    }
-
-    #live-button {
-        border: none;
-        background-color: black;
-        color: white;
-        border-radius: 15px;
-
     }
 
     #past-button {
@@ -587,7 +581,17 @@ h4 {
     }
 }
 .active {
-	background-color: #a1ffb1;
+    border: 1px solid transparent;
+    background-color: black;
+    color: white;
+    border-radius: 15px;
+}
+
+.inactive {
+    border: 1px solid black;
+    background-color: white;
+    color: black;
+    border-radius: 15px;
 }
 
 @media screen and (min-width: 1900px) {
