--- a/css/market.css
+++ b/css/market.css
@@ -32,7 +32,6 @@
 }
 
 #selector-div button {
-    color: black;
     font-size: 3vw;
     line-height: 3vw;
     padding: 1vw;
@@ -441,7 +440,6 @@ h4 {
 
 
     #selector-div button {
-        color: black;
         font-size: 3.4vh;
         line-height: 3.4vh;
         padding: 1vw;
@@ -588,7 +586,7 @@ h4 {
 }
 
 .inactive {
-    border: 1px solid black;
+    border: 1px solid transparent;
     background-color: white;
     color: black;
     border-radius: 15px;
