--- a/css/index.css
+++ b/css/index.css
@@ -234,6 +234,11 @@
     margin-right: 20px;
 }
 
+.approval {
+    background-color: #a1ffb1;
+    color: black;
+}
+
 @media screen and (max-width: 991px) {
 
     .left-number, .right-number {
