--- a/css/index.css
+++ b/css/index.css
@@ -237,6 +237,8 @@
 .approval {
     background-color: #a1ffb1;
     color: black;
+    border-radius: 15px;
+    width: 30%;
 }
 
 @media screen and (max-width: 991px) {
